// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic - Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': 'src.__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': 'src.__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`basic - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic - import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic - string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`basic - with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`basic - with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`filebase = true - Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': 'src.__fixtures__.messages.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`filebase = true - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`filebase = true - import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`filebase = true - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`filebase = true - string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`filebase = true - with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`filebase = true - with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': 'src.__fixtures__.messages.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.messages.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`includeExportName = all - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = all - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = true - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`includeExportName = true - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" - Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': '__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': '__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`removePrefix = "src" - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" - import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" - string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src" - with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`removePrefix = "src" - with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`removePrefix = "src/" -- with slash - Object 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id',
  },
  world: {
    defaultMessage: 'world',
  },
  headerTitle: {
    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.',
  },
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  new: {
    id: 'this is id',
    defaultMessage: 'id'
  },
  world: {
    'id': '__fixtures__.world',

    defaultMessage: 'world'
  },
  headerTitle: {
    'id': '__fixtures__.headerTitle',

    defaultMessage: 'Welcome to dashboard {name}!',
    description: 'Message to greet the user.'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - import as 1`] = `
"
import { defineMessages as m } from 'react-intl'

m({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages as m } from 'react-intl';

m({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - string literal 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  'hello': 'hello',
  'world': 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  'hello': {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  'world': {
    'id': '__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - with include value 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});
"
`;

exports[`removePrefix = "src/" -- with slash - with other func 1`] = `
"
import { defineMessages } from 'react-intl'

defineMessages({
  hello: 'hello',
  world: \`hello world \${1}\`,
})

hello({
  id: 'hoge',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

defineMessages({
  hello: {
    'id': '__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': '__fixtures__.world',
    'defaultMessage': \`hello world \${1}\`
  }
});

hello({
  id: 'hoge'
});
"
`;

exports[`removePrefix = false - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = false - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'src.__fixtures__.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'src.__fixtures__.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = all - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = all - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'default.hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'default.world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = true - basic 1`] = `
"
import { defineMessages } from 'react-intl'

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export default defineMessages({
  hello: {
    'id': 'hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'world',
    'defaultMessage': 'hello world'
  }
});
"
`;

exports[`removePrefix = true, includeExportName = true - multi export 1`] = `
"
import { defineMessages } from 'react-intl'

export const extra = defineMessages({
  hello: 'hello extra',
  world: 'hello world extra',
})

export default defineMessages({
  hello: 'hello',
  world: 'hello world',
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { defineMessages } from 'react-intl';

export const extra = defineMessages({
  hello: {
    'id': 'extra.hello',
    'defaultMessage': 'hello extra'
  },
  world: {
    'id': 'extra.world',
    'defaultMessage': 'hello world extra'
  }
});

export default defineMessages({
  hello: {
    'id': 'hello',
    'defaultMessage': 'hello'
  },
  world: {
    'id': 'world',
    'defaultMessage': 'hello world'
  }
});
"
`;
